fix: remove console.logs
